# Masterarbeit_nRF52833_BluetoothMesh

./: .gitignore  CMakeLists.txt  Kconfig.sysbuild  README.md  nrf52833dk_nrf52833_updated.dts  prj.conf
include/: board.h  model_handler.h  test_model_handler.h  vendor_device_modification_cli.h  vendor_device_modification_srv.h  vendor_game_modification_cli.h  vendor_game_modification_srv.h  vendor_heartbeat_cli.h  vendor_heartbeat_srv.h  vendor_hit_cli.h  vendor_hit_srv.h  vendor_model_common.h  vendor_playerstatus_cli.h  vendor_playerstatus_srv.h  vendor_test_model_cli.h  vendor_test_model_srv.h
src/: main.c  model_handler.c  test_model_handler.c  vendor_device_modification_cli.c  vendor_device_modification_srv.c  vendor_game_modification_cli.c  vendor_game_modification_srv.c  vendor_heartbeat_cli.c  vendor_heartbeat_srv.c  vendor_hit_cli.c  vendor_hit_srv.c  vendor_playerstatus_cli.c  vendor_playerstatus_srv.c  vendor_test_model_cli.c  vendor_test_model_srv.c
